--- a/sensordemo/src/main/res/layout/ele_nearby_ht_record.xml
+++ b/sensordemo/src/main/res/layout/ele_nearby_ht_record.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="15dp"
-        android:text="string/BEACON_HUM"
+        android:text="@string/BEACON_HUM"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtSensorTemperature" />
 </androidx.constraintlayout.widget.ConstraintLayout>
