--- a/sensordemo/src/main/res/layout/load_more.xml
+++ b/sensordemo/src/main/res/layout/load_more.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="Loading..."/>
+            android:text="@string/loading_text"/>
 
     </LinearLayout>
 
