--- a/sensordemo/src/main/res/layout/device_pannel.xml
+++ b/sensordemo/src/main/res/layout/device_pannel.xml
@@ -101,58 +101,58 @@
                     android:text="@string/read_btn_trigger"
                     android:textAllCaps="false" />
 
-                <Button
-                    android:id="@+id/enableBtnAdvTrigger"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/enable_btn_trigger_to_adv"
-                    android:textAllCaps="false" />
+<!--                <Button-->
+<!--                    android:id="@+id/enableBtnAdvTrigger"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:text="@string/enable_btn_trigger_to_adv"-->
+<!--                    android:textAllCaps="false" />-->
 
-                <Button
-                    android:id="@+id/enableBtnAppTrigger"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/enable_btn_trigger_to_app"
-                    android:textAllCaps="false" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/motion_sensor_command"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:gravity="left"
-                android:orientation="horizontal"
-                android:weightSum="1.0">
-
-
-
-                <Button
-                    android:id="@+id/enableAccTrigger"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/ENABLE_MOTION_TRIGGER"
-                    android:textAllCaps="false" />
-
-                <Button
-                    android:id="@+id/disableAccAppTrigger"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/disable_motion_trigger"
-                    android:textAllCaps="false" />
-
-
+<!--                <Button-->
+<!--                    android:id="@+id/enableBtnAppTrigger"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:text="@string/enable_btn_trigger_to_app"-->
+<!--                    android:textAllCaps="false" />-->
 
             </LinearLayout>
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:text="@string/motion_sensor_command"-->
+<!--                android:textSize="16sp"-->
+<!--                android:textStyle="bold" />-->
+
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="fill_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="0dp"-->
+<!--                android:gravity="left"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:weightSum="1.0">-->
+
+
+
+<!--                <Button-->
+<!--                    android:id="@+id/enableAccTrigger"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:text="@string/ENABLE_MOTION_TRIGGER"-->
+<!--                    android:textAllCaps="false" />-->
+
+<!--                <Button-->
+<!--                    android:id="@+id/disableAccAppTrigger"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:text="@string/disable_motion_trigger"-->
+<!--                    android:textAllCaps="false" />-->
+
+
+
+<!--            </LinearLayout>-->
 
             <TextView
                 android:layout_width="match_parent"
@@ -163,37 +163,51 @@
                 android:textStyle="bold" />
 
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:gravity="left"
-                android:orientation="horizontal"
-                android:weightSum="1.0">
+<!--            <LinearLayout-->
+<!--                android:layout_width="fill_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="0dp"-->
+<!--                android:gravity="left"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:weightSum="1.0">-->
 
-                <Button
-                    android:id="@+id/enableAccAdvertisement"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/ENABLE_AXIS_ADVERTISEMENT"
-                    android:textAllCaps="false" />
+<!--                <Button-->
+<!--                    android:id="@+id/enableAccAdvertisement"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:text="@string/ENABLE_AXIS_ADVERTISEMENT"-->
+<!--                    android:textAllCaps="false" />-->
 
-                <Button
-                    android:id="@+id/enableTHAdvertisement"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/ENABLE_HT_ADVERTISEMENT"
-                    android:textAllCaps="false" />
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:orientation="horizontal"
+                    android:weightSum="1.0">
+                        <Button
+                            android:id="@+id/enableTHAdvertisement"
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
+                            android:text="@string/ENABLE_HT_ADVERTISEMENT"
+                            android:textAllCaps="false" />
+                </LinearLayout>
 
 
-                <Button
-                    android:id="@+id/viewTHDataHistory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/VIEW_TEMP_HUMIDITY_HISTORY"
-                    android:textAllCaps="false" />
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:orientation="horizontal"
+                    android:weightSum="1.0">
+                    <Button
+                        android:id="@+id/viewTHDataHistory"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:text="@string/VIEW_TEMP_HUMIDITY_HISTORY"
+                        android:textAllCaps="false" />
+                </LinearLayout>
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
 
             <TextView
@@ -212,20 +226,20 @@
                 android:orientation="horizontal"
                 android:weightSum="1.0">
 
-                <Button
-                    android:id="@+id/enableTHChangeTriggerEvtRpt2Adv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/enable_th_trigger_adv"
-                    android:textAllCaps="false" />
+<!--                <Button-->
+<!--                    android:id="@+id/enableTHChangeTriggerEvtRpt2Adv"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:text="@string/enable_th_trigger_adv"-->
+<!--                    android:textAllCaps="false" />-->
 
 
-                <Button
-                    android:id="@+id/enableTHChangeTriggerEvtRpt2App"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:text="@string/enable_th_change_report"
-                    android:textAllCaps="false" />
+<!--                <Button-->
+<!--                    android:id="@+id/enableTHChangeTriggerEvtRpt2App"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:text="@string/enable_th_change_report"-->
+<!--                    android:textAllCaps="false" />-->
                 <Button
                     android:id="@+id/enablePeriodicallyTHDataToApp"
                     android:layout_width="wrap_content"
@@ -255,11 +269,11 @@
                 android:weightSum="1.0">
 
 
-                <Button
-                    android:id="@+id/dfuDevice"
-                    android:layout_width="60dp"
-                    android:layout_height="50dp"
-                    android:text="@string/kb_dfu_device" />
+<!--                <Button-->
+<!--                    android:id="@+id/dfuDevice"-->
+<!--                    android:layout_width="60dp"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:text="@string/kb_dfu_device" />-->
 
 
                 <Button
